# stasis

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: client.rs
src/: cache.rs  channel.rs  database.rs  lib.rs  logging.rs  main.rs  protocol.rs  server.rs
src/cache/: engine.rs  storage.rs
src/channel/: mpsc.rs
src/protocol/: codec.rs  framing.rs
