[package]
name = "stasis"
version = "0.1.0"
authors = ["Peter Donovan <peter@darkfusion.io>"]
edition = "2021"
license = "MIT"
description = "Prototype implementations of concurrent data structures"
repository = "https://github.com/dark-fusion/stasis"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "stasis"
path = "src/main.rs"

[dependencies]
bytes = "1"
futures = "0.3"
parking_lot = { version = "0.12", features = ["arc_lock"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.6", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Dev profile updated to take advantage of `split-debuginfo`, decreasing
# compilation times during development.
[profile.dev]
split-debuginfo = "unpacked"

[[example]]
name = "client"
path = "examples/client.rs"
